test/testdata/functions/anonymous/missing_1_arg_error.lox
var add = fun(a, b) {
  print a + b;
};

add(1); // error: (anonymous)() accepts 2 arguments but 1 was given
